--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ title: Home
 ---
 <section class="list">
 	<div class="container-fluid">
+		<script>alert("dio cane");</script>
 		<div class="row">
 		{% if site.posts.size == 0 %}
 			<p class="text-center">Nothing published yet!</p>
